--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ jinja2 = "^3.1.2"
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
 isort = "^5.13.2"
+psycopg2-binary = "^2.9.9"
 
 [build-system]
 requires = ["poetry-core"]
