--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,7 +74,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-    - ${AIRFLOW_PROJ_DIR:-.}/templates:/opt/airflow/templates
+    # - ${AIRFLOW_PROJ_DIR:-.}/templates:/opt/airflow/templates
     - ${AIRFLOW_PROJ_DIR:-.}/rendered_templates:/opt/airflow/rendered_templates
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
