--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,8 +49,8 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.8.0}
-  build: .
+  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.8.0}
+  # build: .
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -74,7 +74,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-    # - ${AIRFLOW_PROJ_DIR:-.}/templates:/opt/airflow/templates
+    - ${AIRFLOW_PROJ_DIR:-.}/templates:/opt/airflow/templates
     - ${AIRFLOW_PROJ_DIR:-.}/rendered_templates:/opt/airflow/rendered_templates
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
