--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ jinja2 = "^3.1.2"
 black = "^23.12.1"
 isort = "^5.13.2"
 psycopg2-binary = "^2.9.9"
+ipykernel = "^6.28.0"
 
 [build-system]
 requires = ["poetry-core"]
