--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,22 @@
-[tool.poetry]
-name = "fpl-project"
+[build-system]
+requires = ["setuptools >= 61.0"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "fpl"
 version = "0.1.0"
-description = ""
-authors = ["Omar <omarfessy@gmail.com>"]
+requires-python = ">= 3.12"
+dependencies = [
+  "pydantic",
+]
+authors = [
+  {name = "Omar Fessi", email = "omarfessy@gmail.com"},
+]
+description = "An end to end data pipeline to help fpl managers to make decisions based on data"
 readme = "README.md"
 
-[tool.poetry.dependencies]
-python = "^3.11"
-requests = "^2.31.0"
-jinja2 = "^3.1.2"
-
-
-[tool.poetry.group.dev.dependencies]
-black = "^23.12.1"
-isort = "^5.13.2"
-psycopg2-binary = "^2.9.9"
-ipykernel = "^6.28.0"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.isort]
+profile = "black"
+multi_line_output = "VERTICAL_HANGING_INDENT"
+force_grid_wrap = 2
+line_length = 119
