--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,9 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.8.4  # Specify the version of Ruff
+    rev: v0.8.4 
     hooks:
       # Run the linter and apply fixes
       - id: ruff
         args: [--fix]
+      - id: ruff-format
+
