adjust docs for dimensions

--- a/modeling/models/properties.yml
+++ b/modeling/models/properties.yml
@@ -219,7 +219,7 @@ models:
 
   - name: teams_cleansed
     identifier: teams_cleansed
-    description: Renaming teams data 
+    description: Renaming columns
 
     columns:
       - name: team_id
