clean up modeling folder as per migration from duck to bq

--- a/modeling/models/properties.yml
+++ b/modeling/models/properties.yml
@@ -1,9 +1,5 @@
-version: 2
-
 sources:
-  - name: landing
-    database: "fpl"
-    schema: "main" # The default schema within the database
+  - name: fantasy_premier_league
     tables:
       - name: raw_elements
         description: raw_elements or raw_players data as it comes from the ingestion pipeline
@@ -192,205 +188,3 @@ sources:
             description: Team A difficulty
           - name: ingestion_time
             description: Time of data ingestion
-
-models:
-  - name: players_cleansed
-    identifier: players_cleansed
-    description: Renaming columns
-
-    columns:
-      - name: player_id
-        description: The unique identifier for each player
-      - name: player_first_name
-        description: The first name of the player
-      - name: player_second_name
-        description: The second name of the player
-      - name: player_name
-        description: The web name of the player
-      - name: player_position
-        description: The position of the player on the field
-      - name: player_team_id
-        description: The unique identifier for the team the player belongs to
-      - name: player_current_cost
-        description: The cost of the player in the game
-      - name: player_total_points
-        description: The total points scored by the player
-      - name: ingestion_time
-        description: The time when the data was ingested
-
-  - name: teams_cleansed
-    identifier: teams_cleansed
-    description: Renaming columns
-
-    columns:
-      - name: team_id
-        description: The unique identifier for each team
-      - name: team_name
-        description: name of the team
-      - name: team_short_name
-        description: name of the team
-      - name: team_strength
-        description: strength of the team
-      - name: strength_overall_home
-        description: overall home strength
-      - name: strength_overall_away
-        description: overall away strength
-      - name: strength_attack_home
-        description: home attack strength
-      - name: strength_attack_away
-        description: away attack strength
-      - name: strength_defence_home
-        description: home defence strength
-      - name: strength_defence_away
-        description: away defence strength
-      - name: ingestion_time
-        description: The time when the data was ingested
-        
-  - name: events_cleansed
-    identifier: events_cleansed
-    description: '{{ doc("events_cleansed") }}'
-    columns:
-      - name : event_id
-        description: Unique identifier for the event.
-      - name: gameweek
-        description : The gameweek number for the event.
-      - name: average_fplmanager_score
-        description: The average score of FPL managers for the event.
-      - name: highest_fplmanager_score
-        description: The highest score achieved by an FPL manager for the event.
-      - name: highest_scoring_fplmanager_id
-        description: The ID of the FPL manager with the highest score for the event.
-      - name: fplmanagers_count
-        description: The total number of FPL managers participating in the event.
-      - name: data_checked
-        description: Boolean indicating if the data has been checked.
-      - name: event_date
-        description: The date of the event.
-      - name: chips_played
-        description: Information about chips played during the event.
-      - name: most_selected_player_id
-        description: The ID of the most selected player for the event.
-      - name: most_transferred_player_in_id
-        description: The ID of the player most transferred in for the event.
-      - name: most_captained_player_id
-        description: The ID of the most captained player for the event.
-      - name: most_vice_captained_player_id
-        description : The ID of the most vice-captained player for the event.
-      - name: top_player_info
-        description: Information about the top player for the event.
-      - name: transfers_made
-        description: The number of transfers made during the event.
-      - name: ingestion_time
-        description: The time when the data was ingested.
-  - name: assists_stats
-    identifier: assists_stats
-    description: This model provides statistics on assists made by players during games.
-    columns:
-      - name : game_id
-        description: The game's identifier
-      - name: gameweek_id
-        description: The gameweek's identifier
-      - name: game_kickoff_time
-        description: The game's kickoff time
-      - name: stat_value
-        description: The number of assists made by the player
-      - name: player_id
-        description: The player's identifier
-      - name: side
-        description: Fixture's side (home or away)
-      - name: ingestion_time
-        description: The time when the data was ingested
-  - name: own_goals_stats
-    identifier: own_goals_stats
-    description: This model provides statistics on own goals scored by players during games.
-    columns:
-      - name: game_id
-        description: The game's identifier
-      - name: gameweek_id
-        description: The gameweek's identifier
-      - name: game_kickoff_time
-        description: The game's kickoff time
-      - name: stat_value
-        description: The number of own goals scored by the player
-      - name: player_id
-        description: The player's identifier
-      - name: side
-        description: Fixture's side (home or away)
-      - name: ingestion_time
-        description: The time when the data was ingested
-
-  - name: penalties_missed_stats
-    identifier: penalties_missed_stats
-    description: This model provides statistics on penalties missed scored by players during games.
-    columns:
-      - name: game_id
-        description: The game's identifier
-      - name: gameweek_id
-        description: The gameweek's identifier
-      - name: game_kickoff_time
-        description: The game's kickoff time
-      - name: stat_value
-        description: The number of penalties missed by the player
-      - name: player_id
-        description: The player's identifier
-      - name: side
-        description: Fixture's side (home or away)
-      - name: ingestion_time
-        description: The time when the data was ingested
-
-  - name: penalties_saved_stats
-    identifier: penalties_saved_stats
-    description: This model provides statistics on penalties saved scored by players during games.
-    columns:
-      - name: game_id
-        description: The game's identifier
-      - name: gameweek_id
-        description: The gameweek's identifier
-      - name: game_kickoff_time
-        description: The game's kickoff time
-      - name: stat_value
-        description: The number of penalties saved by the player
-      - name: player_id
-        description: The player's identifier
-      - name: side
-        description: Fixture's side (home or away)
-      - name: ingestion_time
-        description: The time when the data was ingested
-
-  - name: red_cards_stats
-    identifier: red_cards_stats
-    description: This model provides statistics on red cards by players during games.
-    columns:
-      - name: game_id
-        description: The game's identifier
-      - name: gameweek_id
-        description: The gameweek's identifier
-      - name: game_kickoff_time
-        description: The game's kickoff time
-      - name: stat_value
-        description: The number of red cards received by the player
-      - name: player_id
-        description: The player's identifier
-      - name: side
-        description: Fixture's side (home or away)
-      - name: ingestion_time
-        description: The time when the data was ingested
-
-  - name: yellow_cards_stats
-    identifier: yellow_cards_stats
-    description: This model provides statistics on yellow cards by players during games.
-    columns:
-      - name: game_id
-        description: The game's identifier
-      - name: gameweek_id
-        description: The gameweek's identifier
-      - name: game_kickoff_time
-        description: The game's kickoff time
-      - name: stat_value
-        description: The number of yellow cards received by the player
-      - name: player_id
-        description: The player's identifier
-      - name: side
-        description: Fixture's side (home or away)
-      - name: ingestion_time
-        description: The time when the data was ingested
