git ignore .db and ds store

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 logs/
-rendered_templates/
 __pycache__
-dags/__pycache__
-dags/tasks/__pycache__
 plugins/__pycache__
 plugins/operators/__pycache__
 .fpl/
 ingestion/__pycache__
-ingestion/*.parquet
-ingestion/*.db
+settings.json
+package-lock.json
+package.json
+*.parquet
+.DS_Store
+*.db
+terraform/.terraform/
+terraform/tmp
