--- a/modeling/profiles.yml
+++ b/modeling/profiles.yml
@@ -9,7 +9,7 @@ fantasy_premier_league:                 # Your profile name
     bq:
       type: bigquery
       method: oauth
-      project: "{{ env_var('DBT_GCP_PROJECT') }}" #fantasy-premier-league-447918
+      project: "{{ env_var('DBT_GCP_PROJECT') }}" #fantasy-open-analytics
       dataset: "{{ env_var('DBT_TARGET_DATASET') }}" #fantasy_premier_league # You can also use "schema" here
       threads: 1 # Must be a value of 1 or greater 
 
